Atualiza SecurityConfig, PropertyController, CustomUserDetails, PropertyService e adiciona PropertyPageDTO