@@ -8,6 +8,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -21,8 +22,13 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_AGENT"));
+        return List.of(
+                new SimpleGrantedAuthority("ROLE_AGENT"),
+                new SimpleGrantedAuthority("ROLE_ADMIN")
+        );
     }
+
+
 
 
     @Override
